fixed: timeShift.css| forgot ; rendering as expected now.

--- a/style/timeShift.css
+++ b/style/timeShift.css
@@ -11,6 +11,6 @@
 }
 
 * {
-background: black
+background: black;
 
 }
